<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="-38dp">

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="97dp"
        android:layout_height="69dp"
        android:background="#f00"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/red"
        android:textColor="#000"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="298dp"
        android:layout_marginLeft="298dp"
        android:background="#FF7700"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/orange"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="@+id/TextView01"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFDD00"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/yellow"
        android:textColor="#000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="627dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:background="#00FF37"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/green"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@+id/TextView05"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="155dp" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="106dp"
        android:layout_height="67dp"
        android:layout_marginTop="88dp"
        android:background="#0022FF"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/blue"
        android:textColor="#000"
        app:layout_constraintTop_toBottomOf="@+id/TextView02"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="298dp" />

    <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:background="#6200FF"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/indigo"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toEndOf="@+id/TextView05"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="155dp" />

    <TextView
        android:id="@+id/TextView07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="#B02779"
        android:gravity="center"
        android:padding="25dp"
        android:text="@string/violet"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>